--- a/flip-card/index.html
+++ b/flip-card/index.html
@@ -9,16 +9,63 @@
 <body>
     <h1 id="heading">New  Wonders of the World</h1>
     <div id="main">
-        <div class="card">
+        <div class="card" id="first">
             <div class="inner">
                 <div class="front">
-                    
                 </div>
                 <div class="back">
-
                 </div>
             </div>
         </div>
+        <div class="card" id="second">
+            <div class="inner">
+                <div class="front">
+                </div>
+                <div class="back">
+                </div>
+            </div>
+        </div>
+        <div class="card" id="third">
+            <div class="inner">
+                <div class="front">
+                </div>
+                <div class="back">
+                </div>
+            </div>
+        </div>
+        <div class="card" id="four">
+            <div class="inner">
+                <div class="front">
+                </div>
+                <div class="back">
+                </div>
+            </div>
+        </div>
+        <div class="card" id="five">
+            <div class="inner">
+                <div class="front">
+                </div>
+                <div class="back">
+                </div>
+            </div>
+        </div>
+        <div class="card" id="five">
+            <div class="inner">
+                <div class="front">
+                </div>
+                <div class="back">
+                </div>
+            </div>
+        </div>
+        <div class="card" id="five">
+            <div class="inner">
+                <div class="front">
+                </div>
+                <div class="back">
+                </div>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
